--- a/_config.yml
+++ b/_config.yml
@@ -158,15 +158,15 @@ giscus:
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
-#   news:
-#     defaults:
-#       layout: post
-#     output: true
-#     permalink: /news/:path/
-#   projects:
-#     output: true
-#     permalink: /projects/:path/
+collections:
+  news:
+    defaults:
+      layout: post
+    output: false
+    permalink: /news/:path/
+  projects:
+    output: false
+    permalink: /projects/:path/
 
 announcements:
   enabled: false
